added notification type and update counter
