# python-flask/swagger_server/models/service.py
@@ -14,7 +14,7 @@ class Service(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, name: str=None, state: str='OK', output: str='', timestamp: str=None, sla: str='bronze', picky: str=None, url: str=None):  # noqa: E501
+    def __init__(self, name: str=None, state: str='OK', output: str='', timestamp: str=None, updates: int=0, sla: str='bronze', note_type: str='Problem', picky: str=None, url: str=None):  # noqa: E501
         """Service - a model defined in Swagger
 
         :param name: The name of this Service.  # noqa: E501
@@ -25,8 +25,12 @@ class Service(Model):
         :type output: str
         :param timestamp: The timestamp of this Service.  # noqa: E501
         :type timestamp: str
+        :param updates: The updates of this Service.  # noqa: E501
+        :type updates: int
         :param sla: The sla of this Service.  # noqa: E501
         :type sla: str
+        :param note_type: The note_type of this Service.  # noqa: E501
+        :type note_type: str
         :param picky: The picky of this Service.  # noqa: E501
         :type picky: str
         :param url: The url of this Service.  # noqa: E501
@@ -37,7 +41,9 @@ class Service(Model):
             'state': str,
             'output': str,
             'timestamp': str,
+            'updates': int,
             'sla': str,
+            'note_type': str,
             'picky': str,
             'url': str
         }
@@ -47,7 +53,9 @@ class Service(Model):
             'state': 'state',
             'output': 'output',
             'timestamp': 'timestamp',
+            'updates': 'updates',
             'sla': 'sla',
+            'note_type': 'note_type',
             'picky': 'picky',
             'url': 'url'
         }
@@ -55,7 +63,9 @@ class Service(Model):
         self._state = state
         self._output = output
         self._timestamp = timestamp
+        self._updates = updates
         self._sla = sla
+        self._note_type = note_type
         self._picky = picky
         self._url = url
 
@@ -167,6 +177,29 @@ class Service(Model):
         self._timestamp = timestamp
 
     @property
+    def updates(self) -> int:
+        """Gets the updates of this Service.
+
+        Update counter  # noqa: E501
+
+        :return: The updates of this Service.
+        :rtype: int
+        """
+        return self._updates
+
+    @updates.setter
+    def updates(self, updates: int):
+        """Sets the updates of this Service.
+
+        Update counter  # noqa: E501
+
+        :param updates: The updates of this Service.
+        :type updates: int
+        """
+
+        self._updates = updates
+
+    @property
     def sla(self) -> str:
         """Gets the sla of this Service.
 
@@ -192,6 +225,33 @@ class Service(Model):
             )
 
         self._sla = sla
+
+    @property
+    def note_type(self) -> str:
+        """Gets the note_type of this Service.
+
+
+        :return: The note_type of this Service.
+        :rtype: str
+        """
+        return self._note_type
+
+    @note_type.setter
+    def note_type(self, note_type: str):
+        """Sets the note_type of this Service.
+
+
+        :param note_type: The note_type of this Service.
+        :type note_type: str
+        """
+        allowed_values = ["Problem", "Acknowledgement", "Recovery"]  # noqa: E501
+        if note_type not in allowed_values:
+            raise ValueError(
+                "Invalid value for `note_type` ({0}), must be one of {1}"
+                .format(note_type, allowed_values)
+            )
+
+        self._note_type = note_type
 
     @property
     def picky(self) -> str:
